# meTAline

./: .gitignore  Dockerfile  Makefile  README.md  WGS.smk  debug.greasy.job  debug.job  example_hpc_sbatch.job  joblist.txt  meTAgen.smk  meTAgen_env.yml  meTAline.smk  meTAline_env.yml  plot-gen.py  test_run.json
.github/workflows/: docker_image.yml
_scripts/: download_test_datasets  job_array_olfat.job  make_configs.sh  make_joblist_and_greasylist.sh  prepare_greasy_array_job.py
assets/: deploy.sh  release_description_skeleton.md
conda_envs/: meTAline_Rrule.yml  meTAline_env.yml
examples/: example_hpc_sbatch.job  example_job_def_mn5.job  example_single_job_mn5.job
examples/greasy-array-example/: t.sh
external-sources/extract_kraken_output_reads/: Makefile  README.md  setup.cfg
external-sources/extract_kraken_output_reads/extract_kraken_output_reads/: __main__.py  argument_parser.py  extract_kraken_output_reads.py
external-sources/extract_kraken_output_reads/scripts/: install-with-fresh-env.sh
lib/config/: generate_config.py
lib/rules/: RAnalysis.smk  alignment.smk  taxonomy.smk  trimming.smk
lib/scripts/: Biom_to_Phyloseq.R  bar_plot_toptaxa.R
meTAline/: Illumina_MGI_adapters.fa  README.md  adapter_list_new.txt  meTAline.smk
meTAline/Helper_scripts_MN5/: example_single_job_mn5.job  job_array_example.job  make_configs.sh  make_joblist_and_greasylist.sh
meTAline/conda_envs/: meTAline_env.yml
scripts/: download-external-sources.sh  download_test_datasets  get_singularity_def_file_from_dockerfile.sh
test_input/: explanation.txt
(+13 files in other folders)
