[metadata]
name = extract_kraken_output_reads
version = 1.0.0
description = This program extracts reads classified by Kraken as a specified taxonomy ID. Those reads are extracted into a new FASTA file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gabaldonlab/extract_kraken_output_reads
author = Dániel Májer
author_email = majerdaniel93@gmail.com
license = GPL-3.0 license
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GPL-3.0 license
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    biopython==1.84
    numpy==2.0.1
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    extract_kraken_output_reads = extract_kraken_output_reads.extract_kraken_output_reads:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false